# context-whisper

./: .gitignore  .pdm-python  README.md  pyproject.toml
plans/: 20250406.md
src/context_whisper/: modules.py  processing.py
src/context_whisper/data/: datasets.py
src/context_whisper/data/utils/: parse_wiki.py
src/context_whisper/tests/: test_modules.py
src/dev_scripts/: parse_wiki.py
src/notebooks/: debug_training.ipynb
