[project]
name = "whisper_context_cross_attention"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "fnestaas", email = "fnestaas@ethz.ch"},
]
dependencies = [
    "transformers>=4.50.0",
 "matplotlib>=3.10.1",
 "pytest>=8.3.5",
 "torch>=2.6.0",
 "numba>=0.61.0",
 "datasets>=3.4.1",
 "librosa>=0.11.0",
 "soundfile>=0.13.1",
 "pytest-cov>=6.0.0",
 "ipykernel>=6.29.5",
 "torchaudio>=2.6.0",
 "xmltodict>=0.14.2",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
